@@ -313,10 +313,13 @@ COREARRAY_DLL_DEFAULT void vec_i8_count3(const char *p, size_t n,
 COREARRAY_DLL_DEFAULT void vec_i8_replace(int8_t *p, size_t n, int8_t val,
 	int8_t substitute);
 
-///
+/// output (p[0]==val) + (p[1]==val) or missing_substitute
 COREARRAY_DLL_DEFAULT void vec_i8_cnt_dosage2(const int8_t *p,
-	int8_t *out, size_t n, int8_t val, int8_t missing,
-	int8_t missing_substitute);
+	int8_t *out, size_t n, int8_t val, int8_t missing, int8_t missing_substitute);
+
+/// output (p[0]!=val) + (p[1]!=val) or missing_substitute
+COREARRAY_DLL_DEFAULT void vec_i8_cnt_dosage_alt2(const int8_t *p,
+	int8_t *out, size_t n, int8_t val, int8_t missing, int8_t missing_substitute);
 
 
 
@@ -363,8 +366,11 @@ COREARRAY_DLL_DEFAULT void vec_i32_replace(int32_t *p, size_t n, int32_t val,
 
 /// assuming 'out' is 4-byte aligned, output (p[0]==val) + (p[1]==val) or missing_substitute
 COREARRAY_DLL_DEFAULT void vec_i32_cnt_dosage2(const int32_t *p,
-	int32_t *out, size_t n, int32_t val, int32_t missing,
-	int32_t missing_substitute);
+	int32_t *out, size_t n, int32_t val, int32_t missing, int32_t missing_substitute);
+
+/// assuming 'out' is 4-byte aligned, output (p[0]!=val) + (p[1]!=val) or missing_substitute
+COREARRAY_DLL_DEFAULT void vec_i32_cnt_dosage_alt2(const int32_t *p,
+	int32_t *out, size_t n, int32_t val, int32_t missing, int32_t missing_substitute);
 
 /// shifting *p right by 2 bits, assuming p is 4-byte aligned
 COREARRAY_DLL_DEFAULT void vec_i32_shr_b2(int32_t *p, size_t n);
